# pylibczirw

./: README.md  pyproject.toml  setup.py  tox.ini
.github/actions/steps_download/: action.yml
.github/actions/steps_package/: action.yml
.github/actions/steps_psr/: action.yml
.github/workflows/: build-reusable.yml  build.yml
pylibCZIrw/: __init__.py  build_ext.py
